<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/check_your_bmi"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/inputWeightLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:labelFor="@id/weightInput"
                        android:text="@string/input_weight"
                        android:visibility="visible" />

                    <EditText
                        android:id="@+id/weightInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/edit_text"
                        android:ems="10"
                        android:importantForAutofill="no"
                        android:inputType="none|number"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/inputWeightError"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:labelFor="@id/weightInput"
                        android:text="@string/input_weight_error"
                        android:textColor="#FF1744"
                        android:visibility="gone" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/inputHeightLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:labelFor="@id/heightInput"
                        android:text="@string/input_height" />

                    <EditText
                        android:id="@+id/heightInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/edit_text"
                        android:ems="10"
                        android:importantForAutofill="no"
                        android:inputType="none|number"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/inputHeightError"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:labelFor="@id/weightInput"
                        android:text="@string/input_height_error"
                        android:textColor="#FF1744"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/inputAgeLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:labelFor="@id/ageInput"
                        android:text="@string/input_age" />

                    <EditText
                        android:id="@+id/ageInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/edit_text"
                        android:ems="10"
                        android:importantForAutofill="no"
                        android:inputType="none|number"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/inputAgeError"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:labelFor="@id/ageInput"
                        android:text="@string/input_age_error"
                        android:textColor="#FF1744"
                        android:visibility="gone" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/inputGenderLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:labelFor="@id/genderInput"
                        android:text="@string/input_gender" />

                    <RadioGroup
                        android:id="@+id/genderInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/genderF"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/female"
                            android:textColorHighlight="#FFFFFF" />

                        <RadioButton
                            android:id="@+id/genderM"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male" />

                        <TextView
                            android:id="@+id/inputGenderError"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:labelFor="@id/genderInput"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:text="@string/input_gender_error"
                            android:textColor="#FF1744"
                            android:visibility="gone" />
                    </RadioGroup>
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/bmiCalcButtonParent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="300dp">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/bmiCalcButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/colorPrimary"
                        android:text="@string/calculate"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/resultSection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="100dp"
                    android:visibility="invisible">

                    <TextView
                        android:id="@+id/bmiResultText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/bmi_result"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/bmiResultValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/empty"
                        android:textColor="#673AB7"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/bmiStage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/stage"
                        android:textColor="#673AB7"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/dailyKcal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/kcal"
                        android:textColor="#673AB7"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

</RelativeLayout>