<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/check_your_bmi"
            android:textSize="18sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/inputWeightLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:labelFor="@id/weightInput"
                android:text="@string/input_weight"
                android:visibility="visible" />

            <EditText
                android:id="@+id/weightInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/edit_text"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="none|number"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/inputWeightError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/weightInput"
                android:text="@string/input_weight_error"
                android:textColor="#FF1744"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/inputHeightLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"

                android:labelFor="@id/heightInput"
                android:text="@string/input_height" />

            <EditText
                android:id="@+id/heightInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/edit_text"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="none|number"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/inputHeightError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/weightInput"
                android:text="@string/input_height_error"
                android:textColor="#FF1744"
                android:visibility="gone" />
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bmiCalcButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"

            android:background="#673AB7"
            android:text="@string/calculate"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/resultSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible">

            <TextView
                android:id="@+id/bmiResultText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/bmi_result"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bmiResultValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:textColor="#673AB7"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bmiStage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stage1"
                android:textColor="#673AB7"
                android:textSize="18sp"
                android:textStyle="bold" />



        </LinearLayout>


    </LinearLayout>

</ScrollView>