<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/quiz_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="10dp"
                android:text="@string/quiz_title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/q_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:labelFor="@id/q_1"
                    android:text="@string/q_1" />

                <RadioGroup
                    android:id="@+id/q_1_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/a_1_true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_true" />

                    <RadioButton
                        android:id="@+id/a_1_false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_false" />

                    <TextView
                        android:id="@+id/r_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:labelFor="@id/q_1_group"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/answer_true"
                        android:textColor="#FF1744"
                        android:visibility="gone" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/q_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:labelFor="@id/q_2"
                    android:text="@string/q_2" />

                <RadioGroup
                    android:id="@+id/q_2_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/a_2_true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_true" />

                    <RadioButton
                        android:id="@+id/a_2_false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_false" />

                    <TextView
                        android:id="@+id/r_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:labelFor="@id/q_2_group"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/answer_false"
                        android:textColor="#FF1744"
                        android:visibility="gone" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/q_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:labelFor="@id/q_3"
                    android:text="@string/q_3" />

                <RadioGroup
                    android:id="@+id/q_3_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/a_3_true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_true" />

                    <RadioButton
                        android:id="@+id/a_3_false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_false" />

                    <TextView
                        android:id="@+id/r_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:labelFor="@id/q_3_group"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/answer_false"
                        android:textColor="#FF1744"
                        android:visibility="gone" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/q_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:labelFor="@id/q_4"
                    android:text="@string/q_4" />

                <RadioGroup
                    android:id="@+id/q_4_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/a_4_true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_true" />

                    <RadioButton
                        android:id="@+id/a_4_false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_false" />

                    <TextView
                        android:id="@+id/r_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:labelFor="@id/q_4_group"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/answer_false"
                        android:textColor="#FF1744"
                        android:visibility="gone" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/q_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:labelFor="@id/q_5"
                    android:text="@string/q_5" />

                <RadioGroup
                    android:id="@+id/q_5_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/a_5_true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_true" />

                    <RadioButton
                        android:id="@+id/a_5_false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_false" />

                    <TextView
                        android:id="@+id/r_5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:labelFor="@id/q_5_group"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/answer_false"
                        android:textColor="#FF1744"
                        android:visibility="gone" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/q_6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:labelFor="@id/q_6"
                    android:text="@string/q_6" />

                <RadioGroup
                    android:id="@+id/q_6_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/a_6_true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_true" />

                    <RadioButton
                        android:id="@+id/a_6_false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_false" />

                    <TextView
                        android:id="@+id/r_6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:labelFor="@id/q_6_group"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/answer_false"
                        android:textColor="#FF1744"
                        android:visibility="gone" />
                </RadioGroup>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/quizResultButtonParent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/quizResultButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorPrimary"
                    android:text="@string/check_result"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/resultSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="100dp"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/quizResultTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/quizResultTitle"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/quizResultValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quizResultValue"
                    android:textColor="#673AB7"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>